# eunix

./: .gitignore  Cargo.toml
machines/1/: machine.yaml
machines/1/devices/: disk1.enxvd
scripts/: mkenxvd.sh
src/: binaries.rs  devfs.rs  e5fs.rs  eunix.rs  fs.rs  machine.rs  main.rs  util.rs
src/eunix/: binfs.rs  devfs.rs  e5fs.rs  e5fs.sync-conflict-20211216-122350-HOWFLMW.rs  fs.rs  kernel.rs  users.rs  virtfs.rs
src/eunix/devfs/: devfs.rs
src/eunix/e5fs/: e5fs.rs
