[package]
name = "eunix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8"
fancy-regex = "0.7.1"

[profile.dev]
debug = true

[profile.release]
debug = true
