[package]
name = "eunix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8"
fancy-regex = "0.7.1"
itertools = "0.10.3"
#petgraph = "0.6.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[profile.dev]
debug = true

[profile.release]
debug = true
